--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sectored-wheel",
+  "name": "@oleksiy-nesterov/sectored-wheel",
   "version": "1.0.0",
   "description": "Randomized Sectored Wheel. No dependencies, vanilla JS, Web Component.",
   "author": {
